# svm_implementation

./: README.md
cpp/: CMakeLists.txt  demo_svm_smo_linear.cc  demo_svm_smo_nonlinear.cc
cpp/data/: linear_1_test.txt  linear_1_train.txt  nonlinear_1_test.txt  nonlinear_1_train.txt
cpp/src/: CMakeLists.txt
cpp/src/common/: CMakeLists.txt  data_loader.cc  data_loader.h  log.h
cpp/src/support_vector_machine/: CMakeLists.txt  svm.cc  svm.h
cpp/src/support_vector_machine/kernel/: CMakeLists.txt  kernel.h  kernel_calculator.cc  kernel_calculator.h
cpp/src/support_vector_machine/smo/: CMakeLists.txt  smo_worker.cc  smo_worker.h
cpp/src/support_vector_machine/structure/: structure_svm.h
matlab/: demo_linear_test.m  demo_nonlinear_test.m
matlab/data/: data_generate_linear.m  data_generate_nonlinear.m  data_linear.mat  data_nonlinear.mat  f_display_data.m
matlab/svm/: f_svm_param_trim.m  f_svm_testing.m  f_svm_training.m
matlab/svm/kernel/: f_kernel.m  f_kernel_dot.m  f_kernel_gaussian.m  f_kernel_hyperbolic_tangent.m  f_kernel_laplace_rbf.m  f_kernel_normalized_hyperbolic_tangent.m  f_kernel_polynomial.m  f_kernel_rbf.m
matlab/svm/param_trim/: f_svm_param_trim_double.m  f_svm_param_trim_ratio.m  f_svm_param_trim_threshold.m
matlab/svm/testing/: f_svm_testing_standard.m
matlab/svm/training/: f_svm_training_standard.m
